--- a/transformer-template.yaml
+++ b/transformer-template.yaml
@@ -51,4 +51,4 @@ spec:
             - name: MODEL_NAME
               value: "{{inputs.parameters.modelName}}"
             - name: HUGGING_FACE_HUB_TOKEN
-              value: ""
+              value: "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"
